-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0, 5.6.1, 5.7.0
-
None
-
MacOS 10.12 Sierra
-
-
f9280ba45ed6e492871cd25026a1bce7a17042dc
In Mac OS 10.12 Sierra, if QColorDialog is used, application crash and report "The program has unexpectedly finished", when it is closed.
part of error report:
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libc++.1.dylib 0x00007fffa73179b0 std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >::operator=(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 14 1 libFosl_dynamic.dylib 0x00007fffa6f6ffb5 0x7fffa6f6c000 + 16309 2 libFosl_dynamic.dylib 0x00007fffa6f709ec 0x7fffa6f6c000 + 18924 3 libFosl_dynamic.dylib 0x00007fffa6f70c0c 0x7fffa6f6c000 + 19468 4 libFosl_dynamic.dylib 0x00007fffa703af23 0x7fffa6f6c000 + 847651 5 libFosl_dynamic.dylib 0x00007fffa704056e fosl_filter_createGraph + 94 6 com.apple.CoreImage 0x00007fff94290fdb CI::FoslAdapter::FoslAdapter(CI::Context const*, CI::ProgramNode const*, CI::SerialIntArray*, CI::SerialStringArray*, CI::SerialObjectPtrArray*) + 311 7 com.apple.CoreImage 0x00007fff9429049f CI::ShaderBuilder::ShaderBuilder(CI::Context const*, CI::Node const*, CI::ProgramNode const*, CI::SerialIntArray*, CI::SerialStringArray*, CI::SerialObjectPtrArray*) + 41 8 com.apple.CoreImage 0x00007fff94266e5b CI::ProgramNode::create_program_and_arguments(CI::Context*, char const*) + 1467 9 com.apple.CoreImage 0x00007fff94266057 CI::ProgramNode::build_program_graph(CI::Node*, CI::Context*, CI::NodeToNodeMap&, bool) + 1555 10 com.apple.CoreImage 0x00007fff941becc7 CI::Node::program_graph(CI::Context*, CI::NodeToNodeMap&, bool) + 63 11 com.apple.CoreImage 0x00007fff941cdd55 CI::make_program_graph_if_renderable(CI::Context*, char const*, CI::Node*, CGRect const&, CI::swizzle_info const&, char*, unsigned long) + 380 12 com.apple.CoreImage 0x00007fff941cd2bd CI::create_cgimage(CI::Context*, CI::Image*, CGRect, CGColorSpace*, CI::PixelFormat, bool, unsigned long) + 2581 13 com.apple.CoreImage 0x00007fff941b079a -[CIContext(Internal) _createCGImage:fromRect:format:colorSpace:deferred:textureLimit:] + 1059 14 com.apple.CoreImage 0x00007fff941af59f -[CIContext createCGImage:fromRect:format:colorSpace:] + 68 15 com.apple.CoreImage 0x00007fff941af43e -[CIContext createCGImage:fromRect:] + 299 16 com.apple.AppKit 0x00007fff917d9041 -[NSBitmapImageRep initWithCIImage:] + 581 17 com.apple.AppKit 0x00007fff9186149c -[NSColorPickerWheelView _compositeImage] + 511 18 com.apple.AppKit 0x00007fff91861a42 -[NSColorPickerWheelView viewDidChangeBackingProperties] + 90 19 com.apple.AppKit 0x00007fff913b0e07 _NSViewHierarchyDidChangeBackingProperties + 433 20 com.apple.AppKit 0x00007fff91373066 -[NSView addSubview:] + 1242 21 com.apple.AppKit 0x00007fff913ae743 -[NSFrameView addSubview:] + 45 22 com.apple.AppKit 0x00007fff913ae707 -[NSThemeFrame addSubview:] + 383 23 com.apple.AppKit 0x00007fff913ae340 -[NSView addSubview:positioned:relativeTo:] + 217 24 com.apple.AppKit 0x00007fff91b509c5 -[NSThemeFrame addSubview:positioned:relativeTo:] + 43 25 com.apple.AppKit 0x00007fff913ae25a -[NSThemeFrame _addKnownSubview:positioned:relativeTo:] + 38 26 com.apple.AppKit 0x00007fff913d6133 -[NSWindow setContentView:] + 647 27 libqcocoa.dylib 0x0000000109ccfe53 -[QNSColorPanelDelegate restoreOriginalContentView] + 99 28 libqcocoa.dylib 0x0000000109ccf80f -[QNSColorPanelDelegate dealloc] + 31 29 libqcocoa.dylib 0x0000000109cd0ca2 (anonymous namespace)::Q_QGS_sharedColorPanel::innerFunction()::Cleanup::~Cleanup() + 34 30 libsystem_c.dylib 0x00007fffa87d1198 __cxa_finalize_ranges + 332 31 libsystem_c.dylib 0x00007fffa87d14d2 exit + 55 32 libdyld.dylib 0x00007fffa873c25c start + 8
For Gerrit Dashboard: QTBUG-56448 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
174808,2 | QNSColorPanelDelegate: Don't restore stolen view on dealloc | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |