src/plugins/platforms/cocoa/qcocoacolordialoghelper.mm
@@ -116,7 +116,7 @@ QT_NAMESPACE_ALIAS_OBJC_CLASS(QNSColorPanelDelegate);
 
 - (void)dealloc
 {
-    [self restoreOriginalContentView];
+    [mStolenContentView release];
     [mColorPanel setDelegate:nil];
     [[NSNotificationCenter defaultCenter] removeObserver:self];
 
